exports[`no-skip-without-return > invalid(1): import test from 'node:test';\ntest(\"x\", t => { void t.skip(\"nope\"); doStuff(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { void t.skip("nope"); doStuff(); });

`;

exports[`no-skip-without-return > invalid(1): import test from 'node:test';\ntest(\"x\", t => { void t.skip(\"nope\"); doStuff(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { void t.skip("nope"); doStuff(); });
    |                       ^^^^^^^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => { void t.skip("nope");
  3 | return; doStuff(); });

`;

exports[`no-skip-without-return > invalid(10): import test from 'node:test';\ntest(\"x\", t => {\n\tclass A {\n\t\tstatic {\n\t\t\tfor (const item of items) {\n\t\t\t\tt.skip();\n\t\t\t\tdoStuff();\n\t\t\t}\n\t\t}\n\t}\n}); 1`] = `

   1 | import test from 'node:test';
   2 | test("x", t => {
   3 | 	class A {
   4 | 		static {
   5 | 			for (const item of items) {
   6 | 				t.skip();
   7 | 				doStuff();
   8 | 			}
   9 | 		}
  10 | 	}
  11 | });

`;

exports[`no-skip-without-return > invalid(10): import test from 'node:test';\ntest(\"x\", t => {\n\tclass A {\n\t\tstatic {\n\t\t\tfor (const item of items) {\n\t\t\t\tt.skip();\n\t\t\t\tdoStuff();\n\t\t\t}\n\t\t}\n\t}\n}); 2`] = `

Message:
   1 | import test from 'node:test';
   2 | test("x", t => {
   3 | 	class A {
   4 | 		static {
   5 | 			for (const item of items) {
>  6 | 				t.skip();
     | 				^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
   7 | 				doStuff();
   8 | 			}
   9 | 		}
  10 | 	}
  11 | });

`;

exports[`no-skip-without-return > invalid(11): import test from 'node:test';\ntest(\"x\", t => {\n\tclass A {\n\t\tstatic {\n\t\t\ttry {\n\t\t\t\tt.skip();\n\t\t\t\tdoStuff();\n\t\t\t} catch {}\n\t\t}\n\t}\n}); 1`] = `

   1 | import test from 'node:test';
   2 | test("x", t => {
   3 | 	class A {
   4 | 		static {
   5 | 			try {
   6 | 				t.skip();
   7 | 				doStuff();
   8 | 			} catch {}
   9 | 		}
  10 | 	}
  11 | });

`;

exports[`no-skip-without-return > invalid(11): import test from 'node:test';\ntest(\"x\", t => {\n\tclass A {\n\t\tstatic {\n\t\t\ttry {\n\t\t\t\tt.skip();\n\t\t\t\tdoStuff();\n\t\t\t} catch {}\n\t\t}\n\t}\n}); 2`] = `

Message:
   1 | import test from 'node:test';
   2 | test("x", t => {
   3 | 	class A {
   4 | 		static {
   5 | 			try {
>  6 | 				t.skip();
     | 				^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
   7 | 				doStuff();
   8 | 			} catch {}
   9 | 		}
  10 | 	}
  11 | });

`;

exports[`no-skip-without-return > invalid(12): import test from 'node:test';\ntest(\"x\", t => {\n\tclass A {\n\t\tstatic {\n\t\t\t{ t.skip(); doStuff(); }\n\t\t}\n\t}\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	class A {
  4 | 		static {
  5 | 			{ t.skip(); doStuff(); }
  6 | 		}
  7 | 	}
  8 | });

`;

exports[`no-skip-without-return > invalid(12): import test from 'node:test';\ntest(\"x\", t => {\n\tclass A {\n\t\tstatic {\n\t\t\t{ t.skip(); doStuff(); }\n\t\t}\n\t}\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	class A {
  4 | 		static {
> 5 | 			{ t.skip(); doStuff(); }
    | 			  ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  6 | 		}
  7 | 	}
  8 | });

`;

exports[`no-skip-without-return > invalid(13): import test from 'node:test';\ntest(\"x\", t => { class A { static { t.skip(); } } doStuff(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { class A { static { t.skip(); } } doStuff(); });

`;

exports[`no-skip-without-return > invalid(13): import test from 'node:test';\ntest(\"x\", t => { class A { static { t.skip(); } } doStuff(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { class A { static { t.skip(); } } doStuff(); });
    |                                     ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

`;

exports[`no-skip-without-return > invalid(14): import {beforeEach} from 'node:test';\nbeforeEach(t => { t.skip(\"nope\"); doStuff(); }); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(t => { t.skip("nope"); doStuff(); });

`;

exports[`no-skip-without-return > invalid(14): import {beforeEach} from 'node:test';\nbeforeEach(t => { t.skip(\"nope\"); doStuff(); }); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
> 2 | beforeEach(t => { t.skip("nope"); doStuff(); });
    |                   ^^^^^^^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(t => { t.skip("nope");
  3 | return; doStuff(); });

`;

exports[`no-skip-without-return > invalid(15): import {test, getTestContext as gtc} from 'node:test';\ntest('a', () => { gtc().skip('r'); work(); }); 1`] = `

  1 | import {test, getTestContext as gtc} from 'node:test';
  2 | test('a', () => { gtc().skip('r'); work(); });

`;

exports[`no-skip-without-return > invalid(15): import {test, getTestContext as gtc} from 'node:test';\ntest('a', () => { gtc().skip('r'); work(); }); 2`] = `

Message:
  1 | import {test, getTestContext as gtc} from 'node:test';
> 2 | test('a', () => { gtc().skip('r'); work(); });
    |                   ^^^^^^^^^^^^^^^ \`gtc().skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`gtc().skip()\`.:
  1 | import {test, getTestContext as gtc} from 'node:test';
  2 | test('a', () => { gtc().skip('r');
  3 | return; work(); });

`;

exports[`no-skip-without-return > invalid(16): import test from 'node:test';\ntest(\"x\", t => { t?.skip(); assert.ok(x); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { t?.skip(); assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(16): import test from 'node:test';\ntest(\"x\", t => { t?.skip(); assert.ok(x); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { t?.skip(); assert.ok(x); });
    |                  ^^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => { t?.skip();
  3 | return; assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(17): import {test, getTestContext} from 'node:test';\ntest('a', () => { getTestContext().test('child', t => { t.skip(); doStuff(); }); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => { getTestContext().test('child', t => { t.skip(); doStuff(); }); });

`;

exports[`no-skip-without-return > invalid(17): import {test, getTestContext} from 'node:test';\ntest('a', () => { getTestContext().test('child', t => { t.skip(); doStuff(); }); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('a', () => { getTestContext().test('child', t => { t.skip(); doStuff(); }); });
    |                                                         ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => { getTestContext().test('child', t => { t.skip();
  3 | return; doStuff(); }); });

`;

exports[`no-skip-without-return > invalid(18): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip(); // TODO: enable once fixed\n\tcheck();\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip(); // TODO: enable once fixed
  4 | 	check();
  5 | });

`;

exports[`no-skip-without-return > invalid(18): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip(); // TODO: enable once fixed\n\tcheck();\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
> 3 | 	t.skip(); // TODO: enable once fixed
    | 	^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	check();
  5 | });

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip(); // TODO: enable once fixed
  4 | 	return;
  5 | 	check();
  6 | });

`;

exports[`no-skip-without-return > invalid(19): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip(/* why */);\n\tcheck();\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip(/* why */);
  4 | 	check();
  5 | });

`;

exports[`no-skip-without-return > invalid(19): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip(/* why */);\n\tcheck();\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
> 3 | 	t.skip(/* why */);
    | 	^^^^^^^^^^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	check();
  5 | });

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip(/* why */);
  4 | 	return;
  5 | 	check();
  6 | });

`;

exports[`no-skip-without-return > invalid(2): import test from 'node:test';\ntest(\"x\", t => { if (flag) { void t.skip(\"nope\"); } doStuff(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { if (flag) { void t.skip("nope"); } doStuff(); });

`;

exports[`no-skip-without-return > invalid(2): import test from 'node:test';\ntest(\"x\", t => { if (flag) { void t.skip(\"nope\"); } doStuff(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { if (flag) { void t.skip("nope"); } doStuff(); });
    |                                   ^^^^^^^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => { if (flag) { void t.skip("nope");
  3 | return; } doStuff(); });

`;

exports[`no-skip-without-return > invalid(20): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip();\n\t// why\n\tassert.ok(x);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip();
  4 | 	// why
  5 | 	assert.ok(x);
  6 | });

`;

exports[`no-skip-without-return > invalid(20): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip();\n\t// why\n\tassert.ok(x);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
> 3 | 	t.skip();
    | 	^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	// why
  5 | 	assert.ok(x);
  6 | });

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip();
  4 | 	return;
  5 | 	// why
  6 | 	assert.ok(x);
  7 | });

`;

exports[`no-skip-without-return > invalid(21): import test from 'node:test';\ntest(\"x\", t => { t.skip(); assert.ok(x); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { t.skip(); assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(21): import test from 'node:test';\ntest(\"x\", t => { t.skip(); assert.ok(x); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { t.skip(); assert.ok(x); });
    |                  ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => { t.skip();
  3 | return; assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(22): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip();\n\tassert.ok(x);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip();
  4 | 	assert.ok(x);
  5 | });

`;

exports[`no-skip-without-return > invalid(22): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip();\n\tassert.ok(x);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
> 3 | 	t.skip();
    | 	^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	assert.ok(x);
  5 | });

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip();
  4 | 	return;
  5 | 	assert.ok(x);
  6 | });

`;

exports[`no-skip-without-return > invalid(23): import test from 'node:test';\ntest(\"x\", t => { if (cond) { t.skip(); } assert.ok(x); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { if (cond) { t.skip(); } assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(23): import test from 'node:test';\ntest(\"x\", t => { if (cond) { t.skip(); } assert.ok(x); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { if (cond) { t.skip(); } assert.ok(x); });
    |                              ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => { if (cond) { t.skip();
  3 | return; } assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(24): import test from 'node:test';\ntest(\"x\", t => { t.todo(); assert.ok(x); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { t.todo(); assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(24): import test from 'node:test';\ntest(\"x\", t => { t.todo(); assert.ok(x); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { t.todo(); assert.ok(x); });
    |                  ^^^^^^^^ \`t.todo()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t.todo()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => { t.todo();
  3 | return; assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(25): import test from 'node:test';\ntest(\"x\", t => { t.skip(\"not ready\"); assert.ok(x); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { t.skip("not ready"); assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(25): import test from 'node:test';\ntest(\"x\", t => { t.skip(\"not ready\"); assert.ok(x); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { t.skip("not ready"); assert.ok(x); });
    |                  ^^^^^^^^^^^^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => { t.skip("not ready");
  3 | return; assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(26): import test from 'node:test';\ntest(\"x\", context => { context.skip(); doStuff(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", context => { context.skip(); doStuff(); });

`;

exports[`no-skip-without-return > invalid(26): import test from 'node:test';\ntest(\"x\", context => { context.skip(); doStuff(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", context => { context.skip(); doStuff(); });
    |                        ^^^^^^^^^^^^^^ \`context.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`context.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", context => { context.skip();
  3 | return; doStuff(); });

`;

exports[`no-skip-without-return > invalid(27): import test from 'node:test';\ntest(\"x\", async t => { await t.test(\"child\", t2 => { t2.skip(); doStuff(); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", async t => { await t.test("child", t2 => { t2.skip(); doStuff(); }); });

`;

exports[`no-skip-without-return > invalid(27): import test from 'node:test';\ntest(\"x\", async t => { await t.test(\"child\", t2 => { t2.skip(); doStuff(); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", async t => { await t.test("child", t2 => { t2.skip(); doStuff(); }); });
    |                                                      ^^^^^^^^^ \`t2.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t2.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", async t => { await t.test("child", t2 => { t2.skip();
  3 | return; doStuff(); }); });

`;

exports[`no-skip-without-return > invalid(28): import test from 'node:test';\ntest(\"x\", t => { if (cond) t.skip(); assert.ok(x); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { if (cond) t.skip(); assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(28): import test from 'node:test';\ntest(\"x\", t => { if (cond) t.skip(); assert.ok(x); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { if (cond) t.skip(); assert.ok(x); });
    |                            ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

`;

exports[`no-skip-without-return > invalid(29): import test from 'node:test';\ntest(\"x\", (t: any) => { t.skip(); assert.ok(x); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", (t: any) => { t.skip(); assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(29): import test from 'node:test';\ntest(\"x\", (t: any) => { t.skip(); assert.ok(x); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", (t: any) => { t.skip(); assert.ok(x); });
    |                         ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", (t: any) => { t.skip();
  3 | return; assert.ok(x); });

`;

exports[`no-skip-without-return > invalid(3): import test from 'node:test';\ntest(\"x\", t => {\n\tflag && t.skip();\n\tdoStuff();\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	flag && t.skip();
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(3): import test from 'node:test';\ntest(\"x\", t => {\n\tflag && t.skip();\n\tdoStuff();\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
> 3 | 	flag && t.skip();
    | 	        ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(30): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip() as void;\n\tassert.ok(x);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip() as void;
  4 | 	assert.ok(x);
  5 | });

`;

exports[`no-skip-without-return > invalid(30): import test from 'node:test';\ntest(\"x\", t => {\n\tt.skip() as void;\n\tassert.ok(x);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
> 3 | 	t.skip() as void;
    | 	^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	assert.ok(x);
  5 | });

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	t.skip() as void;
  4 | 	return;
  5 | 	assert.ok(x);
  6 | });

`;

exports[`no-skip-without-return > invalid(31): import {test, getTestContext} from 'node:test';\ntest('a', () => {\n\tgetTestContext().skip('why');\n\tdoStuff();\n}); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => {
  3 | 	getTestContext().skip('why');
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(31): import {test, getTestContext} from 'node:test';\ntest('a', () => {\n\tgetTestContext().skip('why');\n\tdoStuff();\n}); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => {
> 3 | 	getTestContext().skip('why');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`getTestContext().skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	doStuff();
  5 | });

Suggestion 1/1: Add \`return\` after \`getTestContext().skip()\`.:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => {
  3 | 	getTestContext().skip('why');
  4 | 	return;
  5 | 	doStuff();
  6 | });

`;

exports[`no-skip-without-return > invalid(32): import {test, getTestContext} from 'node:test';\ntest('a', () => {\n\tgetTestContext().todo('why');\n\tdoStuff();\n}); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => {
  3 | 	getTestContext().todo('why');
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(32): import {test, getTestContext} from 'node:test';\ntest('a', () => {\n\tgetTestContext().todo('why');\n\tdoStuff();\n}); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => {
> 3 | 	getTestContext().todo('why');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`getTestContext().todo()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	doStuff();
  5 | });

Suggestion 1/1: Add \`return\` after \`getTestContext().todo()\`.:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => {
  3 | 	getTestContext().todo('why');
  4 | 	return;
  5 | 	doStuff();
  6 | });

`;

exports[`no-skip-without-return > invalid(33): import {test} from 'node:test';\ntest('a', t => {\n\tt!.skip('why');\n\tdoStuff();\n}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('a', t => {
  3 | 	t!.skip('why');
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(33): import {test} from 'node:test';\ntest('a', t => {\n\tt!.skip('why');\n\tdoStuff();\n}); 2`] = `

Message:
  1 | import {test} from 'node:test';
  2 | test('a', t => {
> 3 | 	t!.skip('why');
    | 	^^^^^^^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	doStuff();
  5 | });

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import {test} from 'node:test';
  2 | test('a', t => {
  3 | 	t!.skip('why');
  4 | 	return;
  5 | 	doStuff();
  6 | });

`;

exports[`no-skip-without-return > invalid(34): import {test} from 'node:test';\ntest('a', t => {\n\t(t as TestContext).skip('why');\n\tdoStuff();\n}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('a', t => {
  3 | 	(t as TestContext).skip('why');
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(34): import {test} from 'node:test';\ntest('a', t => {\n\t(t as TestContext).skip('why');\n\tdoStuff();\n}); 2`] = `

Message:
  1 | import {test} from 'node:test';
  2 | test('a', t => {
> 3 | 	(t as TestContext).skip('why');
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	doStuff();
  5 | });

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import {test} from 'node:test';
  2 | test('a', t => {
  3 | 	(t as TestContext).skip('why');
  4 | 	return;
  5 | 	doStuff();
  6 | });

`;

exports[`no-skip-without-return > invalid(35): import test from 'node:test';\ntest(\"x\", (t: any) => { (t satisfies any).skip(); doStuff(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", (t: any) => { (t satisfies any).skip(); doStuff(); });

`;

exports[`no-skip-without-return > invalid(35): import test from 'node:test';\ntest(\"x\", (t: any) => { (t satisfies any).skip(); doStuff(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", (t: any) => { (t satisfies any).skip(); doStuff(); });
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", (t: any) => { (t satisfies any).skip();
  3 | return; doStuff(); });

`;

exports[`no-skip-without-return > invalid(36): // A \`break\` leaves the loop, not the test, so the code after it still runs\nimport {test} from 'node:test';\ntest('a', t => {\n\tfor (const x of xs) {\n\t\tt.skip();\n\t\tbreak;\n\t}\n\tdoSomething();\n}); 1`] = `

  1 | // A \`break\` leaves the loop, not the test, so the code after it still runs
  2 | import {test} from 'node:test';
  3 | test('a', t => {
  4 | 	for (const x of xs) {
  5 | 		t.skip();
  6 | 		break;
  7 | 	}
  8 | 	doSomething();
  9 | });

`;

exports[`no-skip-without-return > invalid(36): // A \`break\` leaves the loop, not the test, so the code after it still runs\nimport {test} from 'node:test';\ntest('a', t => {\n\tfor (const x of xs) {\n\t\tt.skip();\n\t\tbreak;\n\t}\n\tdoSomething();\n}); 2`] = `

Message:
  1 | // A \`break\` leaves the loop, not the test, so the code after it still runs
  2 | import {test} from 'node:test';
  3 | test('a', t => {
  4 | 	for (const x of xs) {
> 5 | 		t.skip();
    | 		^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  6 | 		break;
  7 | 	}
  8 | 	doSomething();
  9 | });

`;

exports[`no-skip-without-return > invalid(37): import {test} from 'node:test';\ntest('a', t => {\n\tfor (const x of xs) {\n\t\tt.skip();\n\t\tcontinue;\n\t}\n\tdoSomething();\n}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('a', t => {
  3 | 	for (const x of xs) {
  4 | 		t.skip();
  5 | 		continue;
  6 | 	}
  7 | 	doSomething();
  8 | });

`;

exports[`no-skip-without-return > invalid(37): import {test} from 'node:test';\ntest('a', t => {\n\tfor (const x of xs) {\n\t\tt.skip();\n\t\tcontinue;\n\t}\n\tdoSomething();\n}); 2`] = `

Message:
  1 | import {test} from 'node:test';
  2 | test('a', t => {
  3 | 	for (const x of xs) {
> 4 | 		t.skip();
    | 		^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  5 | 		continue;
  6 | 	}
  7 | 	doSomething();
  8 | });

`;

exports[`no-skip-without-return > invalid(38): import {test} from 'node:test';\ntest('a', t => {\n\tswitch (x) {\n\t\tcase 1:\n\t\t\tt.skip();\n\t\t\tbreak;\n\t}\n\tdoSomething();\n}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('a', t => {
  3 | 	switch (x) {
  4 | 		case 1:
  5 | 			t.skip();
  6 | 			break;
  7 | 	}
  8 | 	doSomething();
  9 | });

`;

exports[`no-skip-without-return > invalid(38): import {test} from 'node:test';\ntest('a', t => {\n\tswitch (x) {\n\t\tcase 1:\n\t\t\tt.skip();\n\t\t\tbreak;\n\t}\n\tdoSomething();\n}); 2`] = `

Message:
  1 | import {test} from 'node:test';
  2 | test('a', t => {
  3 | 	switch (x) {
  4 | 		case 1:
> 5 | 			t.skip();
    | 			^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  6 | 			break;
  7 | 	}
  8 | 	doSomething();
  9 | });

`;

exports[`no-skip-without-return > invalid(39): import test from 'node:test';\ntest(\"a\", t => {\n\tfor (const item of items) {\n\t\tif (!item.ok) {\n\t\t\tt.skip(\"bad\");\n\t\t\tcontinue;\n\t\t}\n\n\t\tcheck(item);\n\t}\n}); 1`] = `

   1 | import test from 'node:test';
   2 | test("a", t => {
   3 | 	for (const item of items) {
   4 | 		if (!item.ok) {
   5 | 			t.skip("bad");
   6 | 			continue;
   7 | 		}
   8 |
   9 | 		check(item);
  10 | 	}
  11 | });

`;

exports[`no-skip-without-return > invalid(39): import test from 'node:test';\ntest(\"a\", t => {\n\tfor (const item of items) {\n\t\tif (!item.ok) {\n\t\t\tt.skip(\"bad\");\n\t\t\tcontinue;\n\t\t}\n\n\t\tcheck(item);\n\t}\n}); 2`] = `

Message:
   1 | import test from 'node:test';
   2 | test("a", t => {
   3 | 	for (const item of items) {
   4 | 		if (!item.ok) {
>  5 | 			t.skip("bad");
     | 			^^^^^^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
   6 | 			continue;
   7 | 		}
   8 |
   9 | 		check(item);
  10 | 	}
  11 | });

`;

exports[`no-skip-without-return > invalid(4): import test from 'node:test';\ntest(\"x\", t => {\n\tflag ? t.skip() : null;\n\tdoStuff();\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	flag ? t.skip() : null;
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(4): import test from 'node:test';\ntest(\"x\", t => {\n\tflag ? t.skip() : null;\n\tdoStuff();\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
> 3 | 	flag ? t.skip() : null;
    | 	       ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(40): import test from 'node:test';\ntest(\"a\", t => {\n\tfor (const row of rows) {\n\t\tfor (const cell of row) {\n\t\t\tt.skip();\n\t\t\tbreak;\n\t\t}\n\n\t\tcheck(row);\n\t}\n}); 1`] = `

   1 | import test from 'node:test';
   2 | test("a", t => {
   3 | 	for (const row of rows) {
   4 | 		for (const cell of row) {
   5 | 			t.skip();
   6 | 			break;
   7 | 		}
   8 |
   9 | 		check(row);
  10 | 	}
  11 | });

`;

exports[`no-skip-without-return > invalid(40): import test from 'node:test';\ntest(\"a\", t => {\n\tfor (const row of rows) {\n\t\tfor (const cell of row) {\n\t\t\tt.skip();\n\t\t\tbreak;\n\t\t}\n\n\t\tcheck(row);\n\t}\n}); 2`] = `

Message:
   1 | import test from 'node:test';
   2 | test("a", t => {
   3 | 	for (const row of rows) {
   4 | 		for (const cell of row) {
>  5 | 			t.skip();
     | 			^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
   6 | 			break;
   7 | 		}
   8 |
   9 | 		check(row);
  10 | 	}
  11 | });

`;

exports[`no-skip-without-return > invalid(41): import test from 'node:test';\ntest(\"a\", t => {\n\tblock: {\n\t\tt.skip();\n\t\tbreak block;\n\t}\n\n\tcheck();\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("a", t => {
  3 | 	block: {
  4 | 		t.skip();
  5 | 		break block;
  6 | 	}
  7 |
  8 | 	check();
  9 | });

`;

exports[`no-skip-without-return > invalid(41): import test from 'node:test';\ntest(\"a\", t => {\n\tblock: {\n\t\tt.skip();\n\t\tbreak block;\n\t}\n\n\tcheck();\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("a", t => {
  3 | 	block: {
> 4 | 		t.skip();
    | 		^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  5 | 		break block;
  6 | 	}
  7 |
  8 | 	check();
  9 | });

`;

exports[`no-skip-without-return > invalid(42): import test from 'node:test';\ntest('a', () => { test.getTestContext().skip('r'); work(); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('a', () => { test.getTestContext().skip('r'); work(); });

`;

exports[`no-skip-without-return > invalid(42): import test from 'node:test';\ntest('a', () => { test.getTestContext().skip('r'); work(); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('a', () => { test.getTestContext().skip('r'); work(); });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`test.getTestContext().skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`test.getTestContext().skip()\`.:
  1 | import test from 'node:test';
  2 | test('a', () => { test.getTestContext().skip('r');
  3 | return; work(); });

`;

exports[`no-skip-without-return > invalid(43): import * as nt from 'node:test';\nnt.test('a', () => { nt.getTestContext().skip('r'); work(); }); 1`] = `

  1 | import * as nt from 'node:test';
  2 | nt.test('a', () => { nt.getTestContext().skip('r'); work(); });

`;

exports[`no-skip-without-return > invalid(43): import * as nt from 'node:test';\nnt.test('a', () => { nt.getTestContext().skip('r'); work(); }); 2`] = `

Message:
  1 | import * as nt from 'node:test';
> 2 | nt.test('a', () => { nt.getTestContext().skip('r'); work(); });
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`nt.getTestContext().skip()\` does not stop the test; code after it still runs. Return afterwards.

Suggestion 1/1: Add \`return\` after \`nt.getTestContext().skip()\`.:
  1 | import * as nt from 'node:test';
  2 | nt.test('a', () => { nt.getTestContext().skip('r');
  3 | return; work(); });

`;

exports[`no-skip-without-return > invalid(44): import test from 'node:test';\ntest(\"x\", t => { switch (cond) { case 1: t.skip(); doStuff(); } }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { switch (cond) { case 1: t.skip(); doStuff(); } });

`;

exports[`no-skip-without-return > invalid(44): import test from 'node:test';\ntest(\"x\", t => { switch (cond) { case 1: t.skip(); doStuff(); } }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { switch (cond) { case 1: t.skip(); doStuff(); } });
    |                                          ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.

`;

exports[`no-skip-without-return > invalid(45): import test from 'node:test';\ntest(\"x\", t => {\n\tswitch (cond) {\n\t\tcase 1:\n\t\t\tt.skip();\n\t\t\tdoStuff();\n\t}\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	switch (cond) {
  4 | 		case 1:
  5 | 			t.skip();
  6 | 			doStuff();
  7 | 	}
  8 | });

`;

exports[`no-skip-without-return > invalid(45): import test from 'node:test';\ntest(\"x\", t => {\n\tswitch (cond) {\n\t\tcase 1:\n\t\t\tt.skip();\n\t\t\tdoStuff();\n\t}\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	switch (cond) {
  4 | 		case 1:
> 5 | 			t.skip();
    | 			^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  6 | 			doStuff();
  7 | 	}
  8 | });

`;

exports[`no-skip-without-return > invalid(5): import test from 'node:test';\ntest(\"x\", t => {\n\tflag && void t.skip();\n\tdoStuff();\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	flag && void t.skip();
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(5): import test from 'node:test';\ntest(\"x\", t => {\n\tflag && void t.skip();\n\tdoStuff();\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
> 3 | 	flag && void t.skip();
    | 	             ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(6): import test from 'node:test';\ntest(\"x\", t => {\n\tprepare(), t.skip();\n\tdoStuff();\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	prepare(), t.skip();
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(6): import test from 'node:test';\ntest(\"x\", t => {\n\tprepare(), t.skip();\n\tdoStuff();\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
> 3 | 	prepare(), t.skip();
    | 	           ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(7): import test from 'node:test';\ntest(\"x\", t => {\n\tvoid t.skip();\n\tdoStuff();\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	void t.skip();
  4 | 	doStuff();
  5 | });

`;

exports[`no-skip-without-return > invalid(7): import test from 'node:test';\ntest(\"x\", t => {\n\tvoid t.skip();\n\tdoStuff();\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
> 3 | 	void t.skip();
    | 	     ^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  4 | 	doStuff();
  5 | });

Suggestion 1/1: Add \`return\` after \`t.skip()\`.:
  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	void t.skip();
  4 | 	return;
  5 | 	doStuff();
  6 | });

`;

exports[`no-skip-without-return > invalid(8): import test from 'node:test';\ntest(\"x\", t => {\n\tclass A {\n\t\tstatic {\n\t\t\tt.skip();\n\t\t\tdoStuff();\n\t\t}\n\t}\n}); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	class A {
  4 | 		static {
  5 | 			t.skip();
  6 | 			doStuff();
  7 | 		}
  8 | 	}
  9 | });

`;

exports[`no-skip-without-return > invalid(8): import test from 'node:test';\ntest(\"x\", t => {\n\tclass A {\n\t\tstatic {\n\t\t\tt.skip();\n\t\t\tdoStuff();\n\t\t}\n\t}\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("x", t => {
  3 | 	class A {
  4 | 		static {
> 5 | 			t.skip();
    | 			^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
  6 | 			doStuff();
  7 | 		}
  8 | 	}
  9 | });

`;

exports[`no-skip-without-return > invalid(9): import test from 'node:test';\ntest(\"x\", t => {\n\tclass A {\n\t\tstatic {\n\t\t\tif (x) {\n\t\t\t\tt.skip();\n\t\t\t\tdoStuff();\n\t\t\t}\n\t\t}\n\t}\n}); 1`] = `

   1 | import test from 'node:test';
   2 | test("x", t => {
   3 | 	class A {
   4 | 		static {
   5 | 			if (x) {
   6 | 				t.skip();
   7 | 				doStuff();
   8 | 			}
   9 | 		}
  10 | 	}
  11 | });

`;

exports[`no-skip-without-return > invalid(9): import test from 'node:test';\ntest(\"x\", t => {\n\tclass A {\n\t\tstatic {\n\t\t\tif (x) {\n\t\t\t\tt.skip();\n\t\t\t\tdoStuff();\n\t\t\t}\n\t\t}\n\t}\n}); 2`] = `

Message:
   1 | import test from 'node:test';
   2 | test("x", t => {
   3 | 	class A {
   4 | 		static {
   5 | 			if (x) {
>  6 | 				t.skip();
     | 				^^^^^^^^ \`t.skip()\` does not stop the test; code after it still runs. Return afterwards.
   7 | 				doStuff();
   8 | 			}
   9 | 		}
  10 | 	}
  11 | });

`;
